force-app/main/default/objects/ISUF_Survey__c/ISUF_Survey__c.object-meta.xml
<CustomObject>
    <description>Survey object built by UC Innovation</description>
    <label>ISUF Survey</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>ISUF Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISUF Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>