force-app/main/default/objects/ISUF_Survey__c/fields/Agriculture_and_Life_Sciences__c.field-meta.xml
<CustomField>
    <fullName>Agriculture_and_Life_Sciences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agriculture and Life Sciences</label>
    <type>Checkbox</type>
</CustomField>