force-app/main/default/objects/ISUF_Survey__c/fields/Alumni_Association__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Association</label>
    <type>Checkbox</type>
</CustomField>