force-app/main/default/objects/ISUF_Survey__c/fields/Alumni_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Reputation__c</fullName>
    <label>Alumni Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reputation_Scale</valueSetName>
    </valueSet>
</CustomField>