force-app/main/default/objects/ISUF_Survey__c/fields/Appealing_Campus__c.field-meta.xml
<CustomField>
    <fullName>Appealing_Campus__c</fullName>
    <label>Appealing Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>