force-app/main/default/objects/ISUF_Survey__c/fields/Athletics__c.field-meta.xml
<CustomField>
    <fullName>Athletics__c</fullName>
    <label>Athletics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>