force-app/main/default/objects/ISUF_Survey__c/fields/Athletics_Connection__c.field-meta.xml
<CustomField>
    <fullName>Athletics_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Athletics Connection</label>
    <type>Checkbox</type>
</CustomField>