force-app/main/default/objects/ISUF_Survey__c/fields/Attitudes_Note__c.field-meta.xml
<CustomField>
    <fullName>Attitudes_Note__c</fullName>
    <label>Attitudes Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>