force-app/main/default/objects/ISUF_Survey__c/fields/Beautifying_Campus__c.field-meta.xml
<CustomField>
    <fullName>Beautifying_Campus__c</fullName>
    <label>Beautifying Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>