force-app/main/default/objects/ISUF_Survey__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>