force-app/main/default/objects/ISUF_Survey__c/fields/Broaden_Diversity__c.field-meta.xml
<CustomField>
    <fullName>Broaden_Diversity__c</fullName>
    <label>Broaden Diversity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>