force-app/main/default/objects/ISUF_Survey__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business</label>
    <type>Checkbox</type>
</CustomField>