force-app/main/default/objects/ISUF_Survey__c/fields/Capital_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Capital_Improvements__c</fullName>
    <label>Capital Improvements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>