force-app/main/default/objects/ISUF_Survey__c/fields/Community_Social_Services__c.field-meta.xml
<CustomField>
    <fullName>Community_Social_Services__c</fullName>
    <label>Community/Social Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>