force-app/main/default/objects/ISUF_Survey__c/fields/Connections_Note__c.field-meta.xml
<CustomField>
    <fullName>Connections_Note__c</fullName>
    <label>Connections Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>