force-app/main/default/objects/ISUF_Survey__c/fields/Current_Attitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Attitude__c</fullName>
    <label>Current Attitude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know/Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>