force-app/main/default/objects/ISUF_Survey__c/fields/Economic_Development__c.field-meta.xml
<CustomField>
    <fullName>Economic_Development__c</fullName>
    <label>Economic Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>