force-app/main/default/objects/ISUF_Survey__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>