force-app/main/default/objects/ISUF_Survey__c/fields/Engineering__c.field-meta.xml
<CustomField>
    <fullName>Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering</label>
    <type>Checkbox</type>
</CustomField>