force-app/main/default/objects/ISUF_Survey__c/fields/Enhance_Student_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Enhance_Student_Leadership__c</fullName>
    <label>Enhance Student Leadership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>