force-app/main/default/objects/ISUF_Survey__c/fields/Entrepreneurial__c.field-meta.xml
<CustomField>
    <fullName>Entrepreneurial__c</fullName>
    <label>Entrepreneurial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>