force-app/main/default/objects/ISUF_Survey__c/fields/Entrepreneurial_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Entrepreneurial_Priorities__c</fullName>
    <label>Entrepreneurial Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>