force-app/main/default/objects/ISUF_Survey__c/fields/Environment_Animal__c.field-meta.xml
<CustomField>
    <fullName>Environment_Animal__c</fullName>
    <label>Environment/Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>