force-app/main/default/objects/ISUF_Survey__c/fields/Faculty_Importance__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Importance__c</fullName>
    <label>Faculty Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Importance_Scale</valueSetName>
    </valueSet>
</CustomField>