force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_Foundation_Connections_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_Foundation_Connections_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU Foundation Connections Magazine</label>
    <type>Checkbox</type>
</CustomField>