force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_alumni_or_friends__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_alumni_or_friends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from alumni or friends</label>
    <type>Checkbox</type>
</CustomField>