force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_college_departmental__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_college_departmental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get ISU news from college/dept newsletters</description>
    <inlineHelpText>Get ISU news from college/dept newsletters</inlineHelpText>
    <label>Get ISU news from college/dept newslette</label>
    <type>Checkbox</type>
</CustomField>