force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_ISU_News_Flash__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_ISU_News_Flash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from ISU News Flash</label>
    <type>Checkbox</type>
</CustomField>