force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_ISU_web_site_s__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_ISU_web_site_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from ISU web site(s)</label>
    <type>Checkbox</type>
</CustomField>