force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_media__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from media</label>
    <type>Checkbox</type>
</CustomField>