force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_the_Iowa_Stater__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_the_Iowa_Stater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from the Iowa Stater</label>
    <type>Checkbox</type>
</CustomField>