force-app/main/default/objects/ISUF_Survey__c/fields/Get_ISU_news_from_university_employees__c.field-meta.xml
<CustomField>
    <fullName>Get_ISU_news_from_university_employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get ISU news from university employees</label>
    <type>Checkbox</type>
</CustomField>