force-app/main/default/objects/ISUF_Survey__c/fields/Health_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Health_Medicine__c</fullName>
    <label>Health &amp; Medicine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>