force-app/main/default/objects/ISUF_Survey__c/fields/Hobby_Sports_Recreation__c.field-meta.xml
<CustomField>
    <fullName>Hobby_Sports_Recreation__c</fullName>
    <label>Hobby/Sports/Recreation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>