force-app/main/default/objects/ISUF_Survey__c/fields/Honors_Program__c.field-meta.xml
<CustomField>
    <fullName>Honors_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honors Program</label>
    <type>Checkbox</type>
</CustomField>