force-app/main/default/objects/ISUF_Survey__c/fields/How_Informed__c.field-meta.xml
<CustomField>
    <fullName>How_Informed__c</fullName>
    <label>How Informed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Informed</fullName>
            </value>
            <value>
                <fullName>Somewhat Informed</fullName>
            </value>
            <value>
                <fullName>Well Informed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>