force-app/main/default/objects/ISUF_Survey__c/fields/Human_Sciences__c.field-meta.xml
<CustomField>
    <fullName>Human_Sciences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Human Sciences</label>
    <type>Checkbox</type>
</CustomField>