force-app/main/default/objects/ISUF_Survey__c/fields/Importance_Scale__c.field-meta.xml
<CustomField>
    <fullName>Importance_Scale__c</fullName>
    <label>Financial Aid Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Importance_Scale</valueSetName>
    </valueSet>
</CustomField>