force-app/main/default/objects/ISUF_Survey__c/fields/International_Study__c.field-meta.xml
<CustomField>
    <fullName>International_Study__c</fullName>
    <label>International Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>