force-app/main/default/objects/ISUF_Survey__c/fields/Internships_Research__c.field-meta.xml
<CustomField>
    <fullName>Internships_Research__c</fullName>
    <label>Internships/Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>