force-app/main/default/objects/ISUF_Survey__c/fields/Iowa_State_Center__c.field-meta.xml
<CustomField>
    <fullName>Iowa_State_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iowa State Center</label>
    <type>Checkbox</type>
</CustomField>