force-app/main/default/objects/ISUF_Survey__c/fields/ISU_is_in_my_Will__c.field-meta.xml
<CustomField>
    <fullName>ISU_is_in_my_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISU is in my Will</label>
    <type>Checkbox</type>
</CustomField>