force-app/main/default/objects/ISUF_Survey__c/fields/Liberal_Arts_and_Sciences__c.field-meta.xml
<CustomField>
    <fullName>Liberal_Arts_and_Sciences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberal Arts and Sciences</label>
    <type>Checkbox</type>
</CustomField>