force-app/main/default/objects/ISUF_Survey__c/fields/Libraries_Museums__c.field-meta.xml
<CustomField>
    <fullName>Libraries_Museums__c</fullName>
    <label>Libraries/Museums</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>