force-app/main/default/objects/ISUF_Survey__c/fields/Officials_and_Students__c.field-meta.xml
<CustomField>
    <fullName>Officials_and_Students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Officials and Students</label>
    <type>Checkbox</type>
</CustomField>