force-app/main/default/objects/ISUF_Survey__c/fields/Philanthropic_Gift__c.field-meta.xml
<CustomField>
    <fullName>Philanthropic_Gift__c</fullName>
    <label>Philanthropic Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$100</fullName>
            </value>
            <value>
                <fullName>$100-$499</fullName>
            </value>
            <value>
                <fullName>$500-$999</fullName>
            </value>
            <value>
                <fullName>$1,000-$4,999</fullName>
            </value>
            <value>
                <fullName>$5,000-$9,999</fullName>
            </value>
            <value>
                <fullName>$10,000-$24,999</fullName>
            </value>
            <value>
                <fullName>$25,000-$99,999</fullName>
            </value>
            <value>
                <fullName>$100,000 or more</fullName>
            </value>
            <value>
                <fullName>Prefer not to share this information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>