force-app/main/default/objects/ISUF_Survey__c/fields/Preserve_Traditions__c.field-meta.xml
<CustomField>
    <fullName>Preserve_Traditions__c</fullName>
    <label>Preserve Traditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>