force-app/main/default/objects/ISUF_Survey__c/fields/Professional_Org__c.field-meta.xml
<CustomField>
    <fullName>Professional_Org__c</fullName>
    <label>Professional Org.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituant_Type</valueSetName>
    </valueSet>
</CustomField>