force-app/main/default/objects/ISUF_Survey__c/fields/Promote_International_Study__c.field-meta.xml
<CustomField>
    <fullName>Promote_International_Study__c</fullName>
    <label>Promote International Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>