force-app/main/default/objects/ISUF_Survey__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not on my philanthropic list</fullName>
            </value>
            <value>
                <fullName>Among bottom third</fullName>
            </value>
            <value>
                <fullName>Among middle third</fullName>
            </value>
            <value>
                <fullName>Among top third</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>Prefer not to share this information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>