force-app/main/default/objects/ISUF_Survey__c/fields/Reduce_Student_Debt__c.field-meta.xml
<CustomField>
    <fullName>Reduce_Student_Debt__c</fullName>
    <label>Reduce Student Debt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Scale</valueSetName>
    </valueSet>
</CustomField>