force-app/main/default/objects/ISUF_Survey__c/fields/Reiman_Gardens__c.field-meta.xml
<CustomField>
    <fullName>Reiman_Gardens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reiman Gardens</label>
    <type>Checkbox</type>
</CustomField>