force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_for_basketball__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_for_basketball__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to campus for basketball</label>
    <type>Checkbox</type>
</CustomField>