force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_for_ISU_Legacy_programs__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_for_ISU_Legacy_programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to campus for ISU Legacy programs</label>
    <type>Checkbox</type>
</CustomField>