force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_for_other_athletic_even__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_for_other_athletic_even__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Return to campus for other athletic events</description>
    <inlineHelpText>Return to campus for other athletic events</inlineHelpText>
    <label>Return to campus for other athletic even</label>
    <type>Checkbox</type>
</CustomField>