force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_for_reunions_or_to_see__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_for_reunions_or_to_see__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Return to campus for reunions or to see friends</description>
    <inlineHelpText>Return to campus for reunions or to see friends</inlineHelpText>
    <label>Return to campus for reunions or to see</label>
    <type>Checkbox</type>
</CustomField>