force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_for_theater_or_cultural__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_for_theater_or_cultural__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to campus for theater or cultural</label>
    <type>Checkbox</type>
</CustomField>