force-app/main/default/objects/ISUF_Survey__c/fields/Return_to_campus_to_hear_meet_alumni__c.field-meta.xml
<CustomField>
    <fullName>Return_to_campus_to_hear_meet_alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Return to campus to hear/meet alumni officials and students</description>
    <inlineHelpText>Return to campus to hear/meet alumni officials and students</inlineHelpText>
    <label>Return to campus to hear/meet alumni</label>
    <type>Checkbox</type>
</CustomField>