force-app/main/default/objects/ISUF_Survey__c/fields/Right_Direction__c.field-meta.xml
<CustomField>
    <fullName>Right_Direction__c</fullName>
    <label>Right Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don&apos;t Know/Not Sure</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>