force-app/main/default/objects/ISUF_Survey__c/fields/Strong_financial_aid__c.field-meta.xml
<CustomField>
    <fullName>Strong_financial_aid__c</fullName>
    <label>Strong financial aid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>