force-app/main/default/objects/ISUF_Survey__c/fields/Teaching_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Facilities__c</fullName>
    <label>Teaching Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Scale</valueSetName>
    </valueSet>
</CustomField>