force-app/main/default/objects/ISUF_Survey__c/fields/University_Extension__c.field-meta.xml
<CustomField>
    <fullName>University_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>University Extension</label>
    <type>Checkbox</type>
</CustomField>