force-app/main/default/objects/ISUF_Survey__c/fields/University_Library__c.field-meta.xml
<CustomField>
    <fullName>University_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>University Library</label>
    <type>Checkbox</type>
</CustomField>