force-app/main/default/objects/ISUF_Survey__c/fields/Veterinary_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Veterinary_Medicine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veterinary Medicine</label>
    <type>Checkbox</type>
</CustomField>