force-app/main/default/objects/ISUF_Survey__c/fields/Volunteer_Note__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Note__c</fullName>
    <label>Volunteer Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>