force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_attend_athletic_events__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_attend_athletic_events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would like to attend athletic events</label>
    <type>Checkbox</type>
</CustomField>