force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_attend_college_related_eve__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_attend_college_related_eve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would like to attend college related events</description>
    <inlineHelpText>Would like to attend college related events</inlineHelpText>
    <label>Would like to attend college related eve</label>
    <type>Checkbox</type>
</CustomField>