force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_attend_events_to_learn_way__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_attend_events_to_learn_way__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would like to attend events to learn ways to support ISU</description>
    <inlineHelpText>Would like to attend events to learn ways to support ISU</inlineHelpText>
    <label>Would like to attend events to learn way</label>
    <type>Checkbox</type>
</CustomField>