force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_attend_events_with_network__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_attend_events_with_network__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would like to attend events with networking opportunities</inlineHelpText>
    <label>Would like to attend events with network</label>
    <type>Checkbox</type>
</CustomField>