force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_attend_lectures_seminars_r__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_attend_lectures_seminars_r__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would like to attend lectures/seminars relevant to my career</description>
    <inlineHelpText>Would like to attend lectures/seminars relevant to my career</inlineHelpText>
    <label>Would like to attend lectures/seminars r</label>
    <type>Checkbox</type>
</CustomField>