force-app/main/default/objects/ISUF_Survey__c/fields/Would_like_to_hear_meet_alumni__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_hear_meet_alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would like to hear/meet alumni officials and students</description>
    <inlineHelpText>Would like to hear/meet alumni officials and students</inlineHelpText>
    <label>Would like to hear/meet alumni</label>
    <type>Checkbox</type>
</CustomField>