force-app/main/default/objects/ISUF_Survey__c/recordTypes/Annual_Giving_Response.recordType-meta.xml
<RecordType>
    <fullName>Annual_Giving_Response</fullName>
    <active>true</active>
    <label>Annual Giving Response</label>
</RecordType>